--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     }
   },
   "scripts": {
-    "start": "npm run start-fe | npm run start-api",
+    "start": "npm run react-scripts start && npm run start-api",
     "start-app": "react-scripts start",
     "build-app": "react-scripts build",
     "start-api": "nodemon -w server --exec \"babel-node server --presets es2015,stage-0\"",
@@ -18,6 +18,8 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cors": "^2.7.1",
@@ -36,6 +38,10 @@
     "babel-preset-stage-0": "^6.5.0",
     "concurrently": "^3.6.1",
     "eslint": "^3.1.1",
+    "flow-bin": "^0.81.0",
     "nodemon": "^1.9.2"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
